3.16.2 - Some small changes to appease infosec scanners. Real Eyes Results in the test list